--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+}
+
+body{
+    font-family: Graphik,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,
+    Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
 }
 
 .container{
@@ -13,13 +17,14 @@
 
 .intro-section{
     margin: 0 auto;
-    width: 70%;
+    width: 80%;
     height: 100vh;
 }
 
 .navbar{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-top: 20px;
 }
 
@@ -32,4 +37,19 @@
 
 .navbar li{
     margin-right: 15px;
+}
+
+.cart{
+    display: flex;
+    align-items: center;
+    padding: 2.00em 1.25em;
+    border-radius: 30px;
+    background-color: #FF7A00;
+    height: 50px;
+}
+
+.cart span{
+    color: #fff;
+    font-size: 30px;
+    margin-left: 15px;
 }
