--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body{
     border-radius: 5px;
 }
 
-.about{
+.about, .footer{
     margin: 0 auto;
     background-color: #000;
 }
@@ -99,5 +99,48 @@ body{
 
 .gadgets h1{
     text-align: center;
-    margin: 30px 50px;
+    margin: 50px 120px;
+    font-size: 50px;
+}
+
+.products{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 30px;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 70px;
+}
+
+.product-card{
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.product-card h3{
+    text-align: center;
+    font-size: 23px;
+    font-weight: bold;
+    margin-top: 5px;
+}
+
+.add-to-cart{
+    background-color: #FF7A00;
+    text-align: center; 
+    width: 230px;
+    font-weight: bold;
+    margin: 20px auto;
+    outline: none;
+    color: #000;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.footer-items{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 80%;
+    color: #fff;
 }
