--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@ body{
     margin-right: 15px;
 }
 
+.navbar li:hover{
+    color: #FF7A00;
+}
+
 .cart{
     display: flex;
     align-items: center;
@@ -125,13 +129,83 @@ body{
     margin-top: 5px;
 }
 
+
+.prod1-img{
+    background-image: url("images/product1.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 393px;
+    width: 301px;
+}
+.prod2-img{
+    background-image: url("images/product2.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 393px;
+    width: 301px;
+}
+.prod3-img{
+    background-image: url("images/product3.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 393px;
+    width: 301px;
+}
+.prod4-img{
+    background-image: url("images/product4.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 393px;
+    width: 301px;
+}
+.prod5-img{
+    background-image: url("images/product5.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 393px;
+    width: 301px;
+}
+.prod6-img{
+    background-image: url("images/product6.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 393px;
+    width: 301px;
+}
+
+.prod-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    margin-top: 50%;
+    color: transparent;
+}
+
+.prod-details:hover{
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+.prod-details .price{
+    font-size: 25px;
+    text-decoration: underline;
+}
+.prod-details p{
+    font-size: 45px;
+    margin-bottom: 15px;
+}
+
+
 .add-to-cart{
     background-color: #FF7A00;
     text-align: center; 
     width: 230px;
-    font-weight: bold;
+    font-weight: 800;
     margin: 20px auto;
-    outline: none;
+    border: none;
     color: #000;
     padding: 10px 20px;
     border-radius: 5px;
