--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
 .intro-wrapper {
     background-color: #FFE9D6;  
     height: 100%;
-    padding-bottom: 40px;
+    padding-bottom: 25px;
 }
 
 .intro-section{
@@ -42,7 +42,7 @@ body{
 }
 
 .navbar li:hover{
-    color: #FF7A00;
+    color: #FF0000;
 }
 
 .cart{
@@ -60,6 +60,8 @@ body{
     margin-left: 15px;
 }
 
+
+
 .hero-section {
     width: 90%;
     margin: 0 auto;
@@ -69,13 +71,17 @@ body{
     align-items: center;
 }
 
+.hero-section img{
+    width: 500px;
+}
+
 .hero-section h1{
     font-size: 80px;
     color: #FF7A00;
 }
 
 .shop{
-    background-color: #FF7A00;
+    background-color: #FF9A3D;
     text-align: center;
     width: 270px;
     margin: 20px auto;
@@ -113,7 +119,7 @@ body{
     width: 80%;
     margin: 0 auto;
     margin-top: 70px;
-    padding-bottom: 70px;
+    padding-bottom: 20px;
 }
 
 .product-card{
@@ -206,7 +212,7 @@ body{
 }
 
 .add-to-cart{
-    background-color: #FF7A00;
+    background-color: #FF9A3D;
     text-align: center; 
     width: 230px;
     font-weight: 800;
@@ -220,7 +226,6 @@ body{
 .footer-items{
     display: flex;
     justify-content: space-between;
-    align-items: center;
     margin: 0 auto;
     width: 80%;
     padding: 100px 0;
@@ -237,3 +242,103 @@ body{
     color: #fff;
     font-size: 20px;
 }
+
+@media screen and (max-width: 570px) {
+
+    .intro-wrapper {
+        padding-bottom: 10px;
+    }
+
+    .intro-section{
+        margin: 0 auto;
+        width: 80%;
+    }
+
+    .navbar li{
+        margin-right: 13px;
+        font-size: 10px;
+    }
+
+    .hero-section h1{
+        font-size: 40px;
+        text-align: center;
+    }
+    .cart{
+        height: 20px;
+        padding: 1.2em 0.8em;
+        border-radius: 30px;
+    }
+
+    .cart img{
+        width: 30px;
+        height: 30px;
+    }
+
+    .cart span{
+        font-size: 20px;
+    }    
+
+    .logo img{
+        display: none;
+    }
+
+    .hero-section {
+        flex-direction: column;
+    }
+
+    .hero-section img{
+        width: 300px;
+    }
+
+    .gadgets h1{
+        margin: 15px 30px;
+    }
+
+    .products {
+        grid-template-columns: auto;
+        grid-column-gap: 0;
+        align-items: center;
+        justify-content: center;
+        margin-top: 50px;
+        padding-bottom: 0;
+     }
+
+     .about div{
+        padding: 20px 0;
+        font-size: 17px;
+        line-height: 30px;
+    }
+
+    .footer-items{
+        display: grid;
+        grid-template-columns: auto auto;
+        column-gap: 45px;
+        padding: 25px 0;
+        justify-content: space-between;
+    }
+
+    .footer-logo{
+        background-color: #FF7A00;
+        padding: 0 4px;
+        font-size: 30px;
+        font-weight: 800;
+    }
+
+    .designer p{
+        font-size: 13px;
+        line-height: 20px;
+    }
+
+    
+
+   
+}
+
+@media screen and (min-width: 571px) and (max-width: 768px) {
+    
+}
+
+@media screen and (min-width: 769px) {
+    
+}
+  
