--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,127 @@ body{
     width: 100%;
 }
 
+.modal-bg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.6);
+    visibility: hidden; 
+    opacity: 0; 
+    transition: visibility 0s, opacity 0.8s;
+}
+
+.active-bg{
+    visibility: visible;
+    opacity: 1;
+}
+
+.cart-modal{
+    background-color: #fff;
+    width: 45%;
+    padding: 1%;
+}
+
+
+
+.cart-headings{
+    display: flex;
+    justify-content: space-between;
+}
+
+table{
+    width: 100%;
+}
+
+th {
+    text-align: left;
+    margin-right: 100px;
+    padding-bottom: 15px;
+    font-weight: 700;
+  }
+
+ td{
+    padding-bottom: 15px;
+    font-weight: bold;
+}
+
+.qty-btn button{
+    padding: 1% 7%;
+    border-radius: 5px;
+    border: none;
+    background-color: #FF7A00;
+    color: #fff;
+    cursor: pointer;
+}
+
+.remove-btn{
+    padding: 3% 8%;
+    border-radius: 5px;
+    border: none;
+    background-color: #FFCD9E;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 3% 0;
+}
+
+input{
+    width: 80%;
+    padding: 1%;
+    margin-bottom: 10px;
+    background-color: #FFCD9E;
+}
+
+.summary-actions{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.summary-actions h3{
+    margin-bottom: 4%;
+}
+
+.summary-actions h2{
+    margin-bottom: 1%;
+}
+
+.next-btn{ 
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 auto;
+}
+
+.next-btn button{
+    padding: 2% 6%;
+    margin-right: 1%;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.next-btn button:first-child{
+    background-color: #FFCD9E;
+}
+
+.next-btn button:last-child{
+    background-color: #FF9A3D;
+    color: #fff;
+}
+
 .intro-wrapper {
     background-color: #FFE9D6;  
     height: 100%;
@@ -52,6 +173,7 @@ body{
     border-radius: 30px;
     background-color: #FF7A00;
     height: 50px;
+    cursor: pointer;
 }
 
 .cart span{
@@ -328,10 +450,20 @@ body{
         font-size: 13px;
         line-height: 20px;
     }
+
+    .cart-modal{
+        width: 87%;
+    }
    
 }
 
-@media screen and (min-width: 769px) and (max-width: 1280px) {
+@media screen (width: 768px){
+    .next-btn button{
+        margin-right: 10px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1000px) {
     .products {
         grid-template-columns: auto auto;
      }
@@ -342,6 +474,10 @@ body{
 
     .hero-section h1{
         font-size: 60px
+    }
+
+    .cart-modal{
+        width: 60%;
     }
 
 }
