--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ body{
     width: 100%;
 }
 
-.modal-bg{
+.modal-bg,
+.modal-bm{
     display: flex;
     justify-content: center;
     padding: 2%;
@@ -27,23 +28,6 @@ body{
     visibility: hidden; 
     opacity: 0; 
     transition: visibility 0s, opacity 0.8s;
-}
-
-.modal-bm{
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0,0,0,0.6);
-    /* visibility: hidden;  */
-    opacity: 1; 
-    transition: visibility 0s, opacity 0.8s;
-    
 }
 
 .active-bg{
@@ -110,7 +94,7 @@ form{
 
 input{
     width: 80%;
-    padding: 1%;
+    padding: 1.5%;
     margin-bottom: 10px;
     background-color: #FFCD9E;
 }
@@ -139,7 +123,7 @@ input{
 
 .next-btn button{
     padding: 2% 6%;
-    margin-right: 1%;
+    margin-right: 1.2%;
     border-radius: 5px;
     border: none;
     cursor: pointer;
@@ -419,8 +403,11 @@ input{
     font-size: 20px;
 }
 
-
 @media screen and (max-width: 768px) {
+
+    .cart-details {
+        padding-bottom: 1%;
+    }
 
     .intro-wrapper {
         padding-bottom: 10px;
@@ -507,18 +494,22 @@ input{
     }
 
     .cart-modal{
-        width: 87%;
+        width: 85%;
     }
 
     .modal-bg{
         padding-right: 3.5%;
     }
    
-}
+} 
 
 @media screen (width: 768px){
     .next-btn button{
         margin-right: 10px;
+    }
+
+    .cart-modal{
+        width: 40%;
     }
 }
 
@@ -538,6 +529,4 @@ input{
     .cart-modal{
         width: 60%;
     }
-
 }
-
