--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,22 @@ body{
     transition: visibility 0s, opacity 0.8s;
 }
 
+.modal-bm{
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.6);
+    visibility: visible; 
+    opacity: 1; 
+    transition: visibility 0s, opacity 0.8s;
+}
+
 .active-bg{
     visibility: visible;
     opacity: 1;
@@ -37,13 +53,13 @@ body{
 
 .cart-modal{
     background-color: #fff;
-    width: 45%;
-    padding: 1%;
+    width: 55%;
+    padding: 1% 0 1% 1%;
 }
 
-.cart-details{
+/* .cart-details{
     padding-right: 2.2%;
-}
+} */
 
 .cart-headings{
     display: flex;
@@ -59,6 +75,10 @@ th {
     margin-right: 100px;
     padding-bottom: 15px;
     font-weight: 700;
+  }
+
+  tr{
+    margin-bottom: 50px
   }
 
  td{
@@ -122,11 +142,12 @@ input{
 }
 
 .next-btn button{
-    padding: 2% 6%;
+    padding: 2.5% 8%;
     margin-right: 1.2%;
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    font-size: 15px;
 }
 
 .next-btn button:first-child{
@@ -139,7 +160,16 @@ input{
 }
 
 .recap-details{
+    padding-right: 1%;
+}
 
+.recap-details button{
+    float: right; 
+    padding: 1.5% 13%;
+    background-color: #FF9A3D;
+    border-radius: 5%;
+    color: #fff;
+    border:none
 }
 
 .order-details{
@@ -405,8 +435,14 @@ input{
 
 @media screen and (max-width: 768px) {
 
+    .next-btn button{
+        padding: 2% 6%;
+        font-size: 12px;
+    }
+
     .cart-details {
-        padding-bottom: 1%;
+        /* padding-bottom: 1%; */
+        padding-right: 2.5%;
     }
 
     .intro-wrapper {
@@ -511,6 +547,7 @@ input{
     .cart-modal{
         width: 40%;
     }
+
 }
 
 @media screen and (min-width: 769px) and (max-width: 1000px) {
