--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
 
 .container{
     width: 100%;
+    scroll-behavior: smooth;
 }
 
 .modal-bg,
@@ -43,7 +44,9 @@ body{
     background-color: rgba(0,0,0,0.6);
     visibility: hidden; 
     opacity: 0; 
-    transition: visibility 0s, opacity 0.8s;
+    /* transition: visibility 0s, opacity 0.8s; */
+    transition: visibility 0.8s ease-in-out;
+    transition: opacity 0.8ms ease-in-out;
 }
 
 .active-bg{
@@ -214,16 +217,19 @@ input{
 }
 
 .navbar ul{
-    list-style: none;
     display: flex;
     justify-content: space-between;  
+    list-style: none;
+
 }
 
-.navbar li{
+.navbar li a{
     margin-right: 25px;
+    color: #000;
+    text-decoration: none;
 }
 
-.navbar li:hover{
+.navbar li a:hover{
     color: #FF0000;
 }
 
@@ -269,13 +275,17 @@ input{
 
 .shop{
     background-color: #FF9A3D;
-    text-align: center;
     width: 270px;
     margin: 20px auto;
     outline: none;
-    color: #fff;
     padding: 13px 80px;
     border-radius: 5px;
+}
+
+.shop a{
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
 }
 
 .about, .footer{
@@ -451,7 +461,7 @@ input{
         width: 80%;
     }
 
-    .navbar li{
+    .navbar li a{
         margin-right: 13px;
         font-size: 10px;
     }
@@ -546,7 +556,7 @@ input{
         flex-direction: row;
     }
     
-    .navbar li{
+    .navbar li a{
         margin-right: 25px;
         font-size: 13px;
     }
@@ -581,7 +591,6 @@ input{
         grid-template-columns: auto auto;
         column-gap: 5%;
      }
-
 }
 
 @media screen and (min-width: 769px) and (max-width: 1000px) {
