--- a/styles.css
+++ b/styles.css
@@ -313,7 +313,7 @@ input{
     display: grid;
     grid-template-columns: auto auto auto;
     grid-column-gap: 30px;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     margin-top: 70px;
     padding-bottom: 20px;
@@ -335,8 +335,10 @@ input{
 .prod-feature{
     background-size: cover;
     background-repeat: no-repeat;
-    height: 393px;
-    width: 301px;
+    /* height: 393px;
+    width: 301px;  */
+    width: 380px;
+    height: 430px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -356,13 +358,16 @@ input{
 
 .prod1-img{
     background-image: url("images/product1.png");
+    background-size: cover;
 }
 
 .prod2-img{
     background-image: url("images/product2.png");
+    
 }
 .prod3-img{
     background-image: url("images/product3.png");
+   
 }
 .prod4-img{
     background-image: url("images/product4.png");
@@ -411,7 +416,7 @@ input{
 .add-to-cart{
     background-color: #FF9A3D;
     text-align: center; 
-    width: 230px;
+    width: 300px;
     font-weight: 800;
     margin: 15px 10%;
     border: none;
@@ -542,7 +547,7 @@ input{
     }
 
     .cart-modal{
-        width: 85%;
+        width: 95%;
     }
 
     .modal-bg{
@@ -589,7 +594,7 @@ input{
     }
 
     .cart-modal{
-        width: 50%;
+        width: 80%;
     }
 
     .products {
