--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@ form{
 
 .intro-wrapper {
     background-color: #FFE9D6;  
+    background-color: green;
     height: 100%;
     padding-bottom: 26px;
 }
