--- a/styles.css
+++ b/styles.css
@@ -113,13 +113,21 @@ form{
 
 .input{
     width: 80%;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
 }
 
 .input input{
     width: 100%;
     background-color: #ffe9d6;
     padding: 2.5%;
+}
+
+.invalid-input{
+    border: 3px solid #bc373c;
+}
+
+.valid-input{
+    border: 3px solid rgb(64, 90, 64);
 }
 
 .input span{
