--- a/styles.css
+++ b/styles.css
@@ -609,7 +609,7 @@ form{
      }
 }
 
-@media screen and (min-width: 769px) and (max-width: 800px) {
+@media screen and (min-width: 769px) and (max-width: 1023px) {
 
     .navbar ul{
         justify-content: flex-start;
@@ -617,11 +617,16 @@ form{
 
     .products {
         grid-template-columns: auto auto;
+        /* display: flex;
+        align-items: center; */
+        /* flex-wrap: wrap; */
      }
 
      .prod-feature{
         height: 393px;
         width: 320px;
+        /* width: 440px;
+        height: 440px; */
      }
 
      .add-to-cart{
@@ -639,4 +644,48 @@ form{
     .cart-modal{
         width: 60%;
     }
+}
+
+@media only screen and (min-width: 1024px) and (max-height: 1366px){
+    .container{
+        width: 1336px;
+    }
+
+    .products {
+        /* grid-template-columns: auto auto; */
+        display: flex;
+        align-items: center; 
+        flex-wrap: wrap;
+        padding-left: 2.5%;
+     }
+
+     .prod-feature{
+        width: 550px;
+        height: 700px;
+        flex-grow: 1;
+     }
+
+     .logo img{
+        width: 200px;
+        border: 1px solid red;
+     }
+
+     .cart {
+        width: 170px;
+        padding: 34px;  
+     }
+
+     .navbar ul h2{
+         font-size: 30px;
+     }
+
+     .add-to-cart{
+         width: 450px;
+         padding: 15px 0;
+         font-size: 15px;
+     }
+
+     .designer p{
+         font-size: 25px;
+     }
 }
